gitignore: Exclude all *.bin files
We don't want to track any binary file at all.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 *.o
 *.mod.[co]
 *.cmd
+*.bin
 .tmp_versions
 Module.symvers
 modules.order
 jailhouse.ko
 hypervisor/include/jailhouse/config.h
 hypervisor/hypervisor.lds
-hypervisor/jailhouse.bin
 tools/jailhouse
 config/*.cell
-inmate/*.bin
